// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`resolve it should omit options.auth when encountering an error 1`] = `
"404 - undefined

Entity info:
  - Id: request:a9
  - options: {
  \\"auth\\": \\"[omitted]\\",
  \\"method\\": \\"GET\\",
  \\"json\\": true,
  \\"url\\": \\"http://remote.test/source1\\"
}
  - value: {}

  Request:
  - message: \\"404 - undefined\\"
  - statusCode: 404
  - options: {
  \\"auth\\": \\"[omitted]\\",
  \\"method\\": \\"GET\\",
  \\"json\\": true,
  \\"url\\": \\"http://remote.test/source1\\",
  \\"resolveWithFullResponse\\": true,
  \\"simple\\": true,
  \\"transform2xxOnly\\": false
}
"
`;

exports[`resolveRequest log errors when request fails 1`] = `
"404 - \\"not found\\"

Entity info:
  - Id: test:test
  - options: {
  \\"json\\": true,
  \\"url\\": \\"http://remote.test/source1\\",
  \\"auth\\": \\"[omitted]\\"
}
  - value: \\"foo\\"

  Request:
  - error: \\"not found\\"
  - message: \\"404 - \\\\\\"not found\\\\\\"\\"
  - statusCode: 404
  - options: {
  \\"json\\": true,
  \\"url\\": \\"http://remote.test/source1\\",
  \\"resolveWithFullResponse\\": true,
  \\"simple\\": true,
  \\"transform2xxOnly\\": false,
  \\"auth\\": \\"[omitted]\\"
}
"
`;
